Update portal tomcat to 7.0.92 (#1271)